@@ -18,12 +18,11 @@
  */
 package org.apache.accumulo.test;
 
-import static java.util.concurrent.TimeUnit.MINUTES;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.apache.accumulo.core.util.LazySingletons.GSON;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -37,6 +36,7 @@ import java.util.concurrent.Future;
 import org.apache.accumulo.core.client.Accumulo;
 import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.admin.NewTableConfiguration;
+import org.apache.accumulo.core.client.admin.servers.ServerId;
 import org.apache.accumulo.core.conf.DefaultConfiguration;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.Key;
@@ -44,7 +44,6 @@ import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.file.FileOperations;
 import org.apache.accumulo.core.file.FileSKVWriter;
 import org.apache.accumulo.core.file.rfile.RFile;
-import org.apache.accumulo.core.manager.thrift.ManagerMonitorInfo;
 import org.apache.accumulo.core.metadata.UnreferencedTabletFile;
 import org.apache.accumulo.core.spi.crypto.NoCryptoServiceFactory;
 import org.apache.accumulo.minicluster.ServerType;
@@ -75,7 +74,7 @@ public class CountNameNodeOpsBulkIT extends ConfigurableMacBase {
       justification = "path provided by test; url provided by test")
   private Map<?,?> getStats() throws Exception {
     String uri = getCluster().getMiniDfs().getHttpUri(0);
-    URL url = new URL(uri + "/jmx");
+    var url = new URI(uri + "/jmx").toURL();
     log.debug("Fetching web page " + url);
     String jsonString = FunctionalTestUtils.readWebPage(url).body();
     Map<?,?> jsonObject = GSON.get().fromJson(jsonString, Map.class);
@@ -113,8 +112,7 @@ public class CountNameNodeOpsBulkIT extends ConfigurableMacBase {
       var ntc = new NewTableConfiguration().setProperties(props).withSplits(splits);
       c.tableOperations().create(tableName, ntc);
 
-      ManagerMonitorInfo stats = getCluster().getManagerMonitorInfo();
-      assertEquals(1, stats.tServerInfo.size());
+      assertEquals(1, c.instanceOperations().getServers(ServerId.Type.TABLET_SERVER).size());
 
       log.info("Creating lots of bulk import files");
       final FileSystem fs = getCluster().getFileSystem();
@@ -125,66 +123,69 @@ public class CountNameNodeOpsBulkIT extends ConfigurableMacBase {
       fs.mkdirs(base);
 
       ExecutorService es = Executors.newFixedThreadPool(5);
-      List<Future<String>> futures = new ArrayList<>();
-      for (int i = 0; i < 10; i++) {
-        final int which = i;
-        futures.add(es.submit(() -> {
-          Path files = new Path(base, "files" + which);
-          fs.mkdirs(files);
-          for (int i1 = 0; i1 < 100; i1++) {
-            FileSKVWriter writer = FileOperations.getInstance().newWriterBuilder()
-                .forFile(
-                    UnreferencedTabletFile.of(fs,
-                        new Path(files + "/bulk_" + i1 + "." + RFile.EXTENSION)),
-                    fs, fs.getConf(), NoCryptoServiceFactory.NONE)
-                .withTableConfiguration(DefaultConfiguration.getInstance()).build();
-            writer.startDefaultLocalityGroup();
-            for (int j = 0x100; j < 0xfff; j += 3) {
-              writer.append(new Key(Integer.toHexString(j)), new Value());
+      try {
+        List<Future<String>> futures = new ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+          final int which = i;
+          futures.add(es.submit(() -> {
+            Path files = new Path(base, "files" + which);
+            fs.mkdirs(files);
+            for (int i1 = 0; i1 < 100; i1++) {
+              FileSKVWriter writer = FileOperations.getInstance().newWriterBuilder()
+                  .forFile(
+                      UnreferencedTabletFile.of(fs,
+                          new Path(files + "/bulk_" + i1 + "." + RFile.EXTENSION)),
+                      fs, fs.getConf(), NoCryptoServiceFactory.NONE)
+                  .withTableConfiguration(DefaultConfiguration.getInstance()).build();
+              writer.startDefaultLocalityGroup();
+              for (int j = 0x100; j < 0xfff; j += 3) {
+                writer.append(new Key(Integer.toHexString(j)), new Value());
+              }
+              writer.close();
             }
-            writer.close();
-          }
-          return files.toString();
-        }));
-      }
-      List<String> dirs = new ArrayList<>();
-      for (Future<String> f : futures) {
-        dirs.add(f.get());
-      }
-      log.info("Importing");
-      long startOps = getStat(getStats(), "FileInfoOps");
-      long now = System.currentTimeMillis();
-      List<Future<Object>> errs = new ArrayList<>();
-      for (String dir : dirs) {
-        errs.add(es.submit(() -> {
-          c.tableOperations().importDirectory(dir).to(tableName).load();
-          return null;
-        }));
-      }
-      for (Future<Object> err : errs) {
-        err.get();
-      }
-      es.shutdown();
-      es.awaitTermination(2, MINUTES);
-      log.info(
-          String.format("Completed in %.2f seconds", (System.currentTimeMillis() - now) / 1000.));
-      Thread.sleep(SECONDS.toMillis(30));
-      Map<?,?> map = getStats();
-      map.forEach((k, v) -> {
-        try {
-          if (v != null && Double.parseDouble(v.toString()) > 0.0) {
-            log.debug("{}:{}", k, v);
-          }
-        } catch (NumberFormatException e) {
-          // only looking for numbers
+            return files.toString();
+          }));
         }
-      });
-      long getFileInfoOpts = getStat(map, "FileInfoOps") - startOps;
-      log.info("New bulk import used {} opts, vs old using 2060", getFileInfoOpts);
-      // counts for old bulk import:
-      // Expected number of FileInfoOps was between 1000 and 2100
-      // new bulk import is way better :)
-      assertEquals(20, getFileInfoOpts, "unexpected number of FileInfoOps");
+        List<String> dirs = new ArrayList<>();
+        for (Future<String> f : futures) {
+          dirs.add(f.get());
+        }
+        log.info("Importing");
+        long startOps = getStat(getStats(), "FileInfoOps");
+        long now = System.currentTimeMillis();
+        List<Future<Object>> errs = new ArrayList<>();
+        for (String dir : dirs) {
+          errs.add(es.submit(() -> {
+            c.tableOperations().importDirectory(dir).to(tableName).load();
+            return null;
+          }));
+        }
+        for (Future<Object> err : errs) {
+          err.get();
+        }
+        log.info(
+            String.format("Completed in %.2f seconds", (System.currentTimeMillis() - now) / 1000.));
+        Thread.sleep(SECONDS.toMillis(30));
+        Map<?,?> map = getStats();
+        map.forEach((k, v) -> {
+          try {
+            if (v != null && Double.parseDouble(v.toString()) > 0.0) {
+              log.debug("{}:{}", k, v);
+            }
+          } catch (NumberFormatException e) {
+            // only looking for numbers
+          }
+        });
+        long getFileInfoOpts = getStat(map, "FileInfoOps") - startOps;
+        log.info("New bulk import used {} opts, vs old using 2060", getFileInfoOpts);
+        // counts for old bulk import:
+        // Expected number of FileInfoOps was between 1000 and 2100
+        // new bulk import is way better :)
+        assertEquals(20, getFileInfoOpts, "unexpected number of FileInfoOps");
+
+      } finally {
+        es.shutdown();
+      }
     }
   }
 }
