@@ -33,7 +33,6 @@ import java.io.IOException;
 import java.math.BigInteger;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
@@ -50,11 +49,14 @@ import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.concurrent.Callable;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -80,6 +82,7 @@ import org.apache.accumulo.core.data.LoadPlan;
 import org.apache.accumulo.core.data.LoadPlan.RangeType;
 import org.apache.accumulo.core.data.Mutation;
 import org.apache.accumulo.core.data.Range;
+import org.apache.accumulo.core.data.RowRange;
 import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.data.constraints.Constraint;
@@ -98,14 +101,14 @@ import org.apache.accumulo.core.security.Authorizations;
 import org.apache.accumulo.core.security.TablePermission;
 import org.apache.accumulo.core.spi.crypto.NoCryptoServiceFactory;
 import org.apache.accumulo.core.util.UtilWaitThread;
-import org.apache.accumulo.harness.MiniClusterConfigurationCallback;
-import org.apache.accumulo.harness.SharedMiniClusterBase;
 import org.apache.accumulo.minicluster.MemoryUnit;
 import org.apache.accumulo.minicluster.ServerType;
 import org.apache.accumulo.miniclusterImpl.MiniAccumuloConfigImpl;
 import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.constraints.MetadataConstraints;
 import org.apache.accumulo.server.constraints.SystemEnvironment;
+import org.apache.accumulo.test.harness.MiniClusterConfigurationCallback;
+import org.apache.accumulo.test.harness.SharedMiniClusterBase;
 import org.apache.accumulo.test.util.Wait;
 import org.apache.commons.io.IOUtils;
 import org.apache.hadoop.conf.Configuration;
@@ -120,6 +123,10 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.MoreCollectors;
 import com.google.common.util.concurrent.MoreExecutors;
@@ -127,6 +134,8 @@ import com.google.common.util.concurrent.MoreExecutors;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 public class BulkNewIT extends SharedMiniClusterBase {
+
+  private static final Logger LOG = LoggerFactory.getLogger(BulkNewIT.class);
 
   @Override
   protected Duration defaultTimeout() {
@@ -147,7 +156,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
     @Override
     public void configureMiniCluster(MiniAccumuloConfigImpl cfg, Configuration conf) {
       cfg.setMemory(ServerType.TABLET_SERVER, 512, MemoryUnit.MEGABYTE);
-
+      cfg.getClusterServerConfiguration().setNumDefaultCompactors(4);
       // use raw local file system
       conf.set("fs.file.impl", RawLocalFileSystem.class.getName());
     }
@@ -226,6 +235,84 @@ public class BulkNewIT extends SharedMiniClusterBase {
   public void testSingleTabletSingleFile() throws Exception {
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
       testSingleTabletSingleFile(client, false, false);
+    }
+  }
+
+  @Test
+  public void testConcurrentImportSameDirectory() throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      final int numTasks = 16;
+      final int iterations = 3;
+      final int startRow = 0;
+      final int endRow = 199;
+
+      ExecutorService pool = Executors.newFixedThreadPool(numTasks);
+
+      try {
+        for (int i = 0; i < iterations; i++) {
+          LOG.debug("Running concurrent import iteration {}/{}", i + 1, iterations);
+          final String table = getUniqueNames(1)[0] + i;
+          client.tableOperations().create(table);
+
+          Path sourceDir = new Path(rootPath + "/concurrent/" + table + "_sourceDir");
+          assertTrue(fs.mkdirs(sourceDir), "Failed to create " + sourceDir);
+
+          writeData(fs, sourceDir + "/f.", aconf, startRow, endRow);
+
+          CountDownLatch startSignal = new CountDownLatch(numTasks);
+          List<Future<Boolean>> futures = new ArrayList<>(numTasks);
+          Predicate<Throwable> expectedConcurrentFailure = throwable -> {
+            if (throwable instanceof IOException || throwable instanceof AccumuloException) {
+              LOG.debug("Concurrent import attempt ({}) failed as expected with {}: {}",
+                  Thread.currentThread().getName(), throwable.getClass().getSimpleName(),
+                  throwable.getMessage());
+              return true;
+            }
+            return false;
+          };
+
+          for (int task = 0; task < numTasks; task++) {
+            futures.add(pool.submit(() -> {
+              final var importMappingOptions =
+                  client.tableOperations().importDirectory(sourceDir.toString()).to(table);
+              try {
+                startSignal.countDown();
+                startSignal.await();
+                importMappingOptions.load();
+                return true;
+              } catch (Exception e) {
+                if (expectedConcurrentFailure.test(e)) {
+                  return false;
+                }
+                throw e;
+              }
+            }));
+          }
+          assertEquals(numTasks, futures.size());
+
+          int success = 0;
+          int failures = 0;
+          for (Future<Boolean> future : futures) {
+            if (future.get()) {
+              success++;
+            } else {
+              failures++;
+            }
+          }
+          assertEquals(1, success, "Expected exactly one successful bulk import");
+          assertEquals(numTasks - 1, failures,
+              "Expected all other attempts to fail with a concurrency related exception");
+
+          try (var scanner = client.createScanner(table, Authorizations.EMPTY)) {
+            long count = scanner.stream().count();
+            assertEquals(endRow - startRow + 1, count);
+          }
+          client.tableOperations().delete(table);
+        }
+      } finally {
+        pool.shutdownNow();
+        pool.awaitTermination(30, TimeUnit.SECONDS);
+      }
     }
   }
 
@@ -383,41 +470,45 @@ public class BulkNewIT extends SharedMiniClusterBase {
       // Start a second bulk import in background thread because it is expected this bulk import
       // will hang because tablets are over the pause file limit.
       ExecutorService executor = Executors.newFixedThreadPool(1);
-      var future = executor.submit(() -> {
-        client.tableOperations().importDirectory(dir2).to(tableName).tableTime(true).load();
-        return null;
-      });
+      try {
+        var future = executor.submit(() -> {
+          client.tableOperations().importDirectory(dir2).to(tableName).tableTime(true).load();
+          return null;
+        });
 
-      // sleep a bit to give the bulk import a chance to run
-      UtilWaitThread.sleep(3000);
-      // bulk import should not have gone through it should be pausing because the tablet have too
-      // many files
-      assertFalse(future.isDone());
-      verifyData(client, tableName, 0, 179, false);
+        // sleep a bit to give the bulk import a chance to run
+        UtilWaitThread.sleep(3000);
+        // bulk import should not have gone through it should be pausing because the tablet have too
+        // many files
+        assertFalse(future.isDone());
+        verifyData(client, tableName, 0, 179, false);
 
-      // Before the bulk import runs no tablets should have loaded flags set
-      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
-      // compacting the first tablet should allow the import on that tablet to proceed
-      client.tableOperations().compact(tableName,
-          new CompactionConfig().setWait(true).setEndRow(new Text("0060")));
-      // Wait for the first tablets data to be updated by bulk import.
-      Wait.waitFor(
-          () -> Map.of("0060", 7, "0120", 0, "null", 0).equals(countLoaded(client, tableName)));
+        // Before the bulk import runs no tablets should have loaded flags set
+        assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+        // compacting the first tablet should allow the import on that tablet to proceed
+        client.tableOperations().compact(tableName,
+            new CompactionConfig().setWait(true).setEndRow(new Text("0060")));
+        // Wait for the first tablets data to be updated by bulk import.
+        Wait.waitFor(
+            () -> Map.of("0060", 7, "0120", 0, "null", 0).equals(countLoaded(client, tableName)));
 
-      // The bulk imports on the other tablets should not have gone through, verify their data was
-      // not updated. Spot check a few rows in the other two tablets. The first tablet may or may
-      // not be updated on the tablet server at this point, so can not look at its data.
-      assertEquals(61L, readRowValue(client, tableName, 61));
-      assertEquals(100L, readRowValue(client, tableName, 100));
-      assertEquals(140L, readRowValue(client, tableName, 140));
+        // The bulk imports on the other tablets should not have gone through, verify their data was
+        // not updated. Spot check a few rows in the other two tablets. The first tablet may or may
+        // not be updated on the tablet server at this point, so can not look at its data.
+        assertEquals(61L, readRowValue(client, tableName, 61));
+        assertEquals(100L, readRowValue(client, tableName, 100));
+        assertEquals(140L, readRowValue(client, tableName, 140));
 
-      // compact the entire table, should allow all bulk imports to go through
-      client.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
-      // wait for bulk import to complete
-      future.get();
-      // verify the values were updated by the bulk import that was paused
-      verifyData(client, tableName, 0, 179, 1000, false);
-      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+        // compact the entire table, should allow all bulk imports to go through
+        client.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
+        // wait for bulk import to complete
+        future.get();
+        // verify the values were updated by the bulk import that was paused
+        verifyData(client, tableName, 0, 179, 1000, false);
+        assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+      } finally {
+        executor.shutdown();
+      }
     }
   }
 
@@ -908,15 +999,9 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
-  @Test
-  public void testConcurrentCompactions() throws Exception {
-    // run test with bulk imports happening in parallel
-    testConcurrentCompactions(true);
-    // run the test with bulk imports happening serially
-    testConcurrentCompactions(false);
-  }
-
-  private void testConcurrentCompactions(boolean parallelBulkImports) throws Exception {
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  public void testConcurrentCompactions(boolean parallelBulkImports) throws Exception {
     // Tests compactions running concurrently with bulk import to ensure that data is not bulk
     // imported twice. Doing a large number of bulk imports should naturally cause compactions to
     // happen. This test ensures that compactions running concurrently with bulk import does not
@@ -928,7 +1013,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       c.tableOperations().delete(tableName);
       // Create table without versioning iterator. This done to detect the same file being imported
       // more than once.
-      c.tableOperations().create(tableName, new NewTableConfiguration().withoutDefaultIterators());
+      c.tableOperations().create(tableName, new NewTableConfiguration().withoutDefaults());
 
       addSplits(c, tableName, "0999 1999 2999 3999 4999 5999 6999 7999 8999");
 
@@ -937,9 +1022,15 @@ public class BulkNewIT extends SharedMiniClusterBase {
       final int N = 100;
 
       ExecutorService executor;
+      CountDownLatch startLatch;
       if (parallelBulkImports) {
-        executor = Executors.newFixedThreadPool(16);
+        final int numThreads = 16;
+        executor = Executors.newFixedThreadPool(numThreads);
+        startLatch = new CountDownLatch(numThreads); // wait for a portion of the tasks to be ready
+        assertTrue(N >= startLatch.getCount(),
+            "Not enough tasks/threads to satisfy latch count - deadlock risk");
       } else {
+        startLatch = null;
         // execute the bulk imports in the current thread which will cause them to run serially
         executor = MoreExecutors.newDirectExecutorService();
       }
@@ -952,12 +1043,17 @@ public class BulkNewIT extends SharedMiniClusterBase {
           for (int f = 0; f < 10; f++) {
             writeData(fs, iterationDir + "/f" + f + ".", aconf, f * 1000, (f + 1) * 1000 - 1);
           }
+          if (parallelBulkImports) {
+            startLatch.countDown();
+            startLatch.await();
+          }
           c.tableOperations().importDirectory(iterationDir).to(tableName).tableTime(true).load();
           getCluster().getFileSystem().delete(new Path(iterationDir), true);
         } catch (Exception e) {
           throw new IllegalStateException(e);
         }
       })).collect(Collectors.toList());
+      assertEquals(N, futures.size());
 
       // wait for all bulk imports and check for errors in background threads
       for (var future : futures) {
@@ -991,6 +1087,10 @@ public class BulkNewIT extends SharedMiniClusterBase {
         // expect to see 10 tablets
         assertEquals(10, rowCounts.size());
       }
+
+      // since this is a parameterized test it will use the same tableName, so delete for the next
+      // parameterized iteration
+      c.tableOperations().delete(tableName);
     }
   }
 
@@ -1034,11 +1134,11 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       addSplits(c, tableName, "0100 0200 0300 0400 0500");
 
-      c.tableOperations().setTabletAvailability(tableName, new Range("0100", false, "0200", true),
+      c.tableOperations().setTabletAvailability(tableName, RowRange.openClosed("0100", "0200"),
           TabletAvailability.HOSTED);
-      c.tableOperations().setTabletAvailability(tableName, new Range("0300", false, "0400", true),
+      c.tableOperations().setTabletAvailability(tableName, RowRange.openClosed("0300", "0400"),
           TabletAvailability.HOSTED);
-      c.tableOperations().setTabletAvailability(tableName, new Range("0400", false, null, true),
+      c.tableOperations().setTabletAvailability(tableName, RowRange.greaterThan("0400"),
           TabletAvailability.UNHOSTED);
 
       // verify tablet availabilities are as expected
@@ -1103,31 +1203,41 @@ public class BulkNewIT extends SharedMiniClusterBase {
           .collect(Collectors.toCollection(TreeSet::new));
       c.tableOperations().addSplits(tableName, splits);
 
-      var executor = Executors.newFixedThreadPool(16);
+      final int numTasks = 16;
       var futures = new ArrayList<Future<?>>();
+      // wait for a portion of the tasks to be ready
+      CountDownLatch startLatch = new CountDownLatch(numTasks);
+      assertTrue(numTasks >= startLatch.getCount(),
+          "Not enough tasks/threads to satisfy latch count - deadlock risk");
 
       var loadPlanBuilder = LoadPlan.builder();
       var rowsExpected = new HashSet<>();
       var imports = IntStream.range(2, 8999).boxed().collect(Collectors.toList());
       // The order in which imports are added to the load plan should not matter so test that.
       Collections.shuffle(imports);
-      for (var data : imports) {
-        String filename = "f" + data + ".";
-        loadPlanBuilder.loadFileTo(filename + RFile.EXTENSION, RangeType.TABLE, row(data - 1),
-            row(data));
-        var future = executor.submit(() -> {
-          writeData(fs, dir + "/" + filename, aconf, data, data);
-          return null;
-        });
-        futures.add(future);
-        rowsExpected.add(row(data));
-      }
+      var executor = Executors.newFixedThreadPool(numTasks);
+      try {
+        for (var data : imports) {
+          String filename = "f" + data + ".";
+          loadPlanBuilder.loadFileTo(filename + RFile.EXTENSION, RangeType.TABLE, row(data - 1),
+              row(data));
+          var future = executor.submit(() -> {
+            startLatch.countDown();
+            startLatch.await();
+            writeData(fs, dir + "/" + filename, aconf, data, data);
+            return null;
+          });
+          futures.add(future);
+          rowsExpected.add(row(data));
+        }
+        assertEquals(imports.size(), futures.size());
 
-      for (var future : futures) {
-        future.get();
+        for (var future : futures) {
+          future.get();
+        }
+      } finally {
+        executor.shutdown();
       }
-
-      executor.shutdown();
 
       var loadPlan = loadPlanBuilder.build();
 
@@ -1169,7 +1279,8 @@ public class BulkNewIT extends SharedMiniClusterBase {
    */
   private static Map<String,TabletAvailability> getTabletAvailabilities(AccumuloClient c,
       String tableName) throws TableNotFoundException {
-    try (var tabletsInfo = c.tableOperations().getTabletInformation(tableName, new Range())) {
+    try (var tabletsInfo =
+        c.tableOperations().getTabletInformation(tableName, List.of(RowRange.all()))) {
       return tabletsInfo.collect(Collectors.toMap(ti -> {
         var er = ti.getTabletId().getEndRow();
         return er == null ? "NULL" : er.toString();
@@ -1321,7 +1432,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       justification = "path provided by test; sha-1 is okay for test")
   public static String hash(String filename) {
     try {
-      byte[] data = Files.readAllBytes(Paths.get(filename.replaceFirst("^file:", "")));
+      byte[] data = Files.readAllBytes(java.nio.file.Path.of(filename.replaceFirst("^file:", "")));
       byte[] hash = MessageDigest.getInstance("SHA1").digest(data);
       return new BigInteger(1, hash).toString(16);
     } catch (IOException | NoSuchAlgorithmException e) {
